# TP-avions

./: .gitignore  Avion.cpp  Avion.h  AvionAmi.h  AvionEnnemi.cpp  CMakeLists.txt  GeneralCallback.h  Makefile
include/: Avion.h  AvionEnnemi.h  GeneralCallback.h
src/: AvionAmi.cpp  AvionEnnemi.cpp  GeneralCallback.cpp  main.cpp
